# small-world-linkedin

./: .gitignore  README.md  pyproject.toml  scx_graph.html
.devcontainer/: devcontainer.json
small_world_linkedin/: main.py
small_world_linkedin/data/: linkedin.csv  linkedin_graph.csv  linkedin_graph.json  linkedin_graph_old.json  linkedin_urls.csv  linkedin_urls_v2.csv  linkedin_v2.csv  linkedin_v3.csv  linkedin_v4.csv  linkedin_v5.csv  simulated_linkedin_connections.csv
tests/: connections_graph.html  evaluateGraph.ipynb  newTests.ipynb  new_analysis.py  scrapLinkedIn.ipynb
