[tool.poetry]
name = "small-world-linkedin"
version = "0.1.0"
description = ""
authors = ["Guilherme Lourenco <gui.lourenzo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
networkx = "^3.4.2"
plotly = "^5.24.1"
streamlit = "^1.40.1"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
nbformat = "^5.10.4"
pyvis = "^0.3.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
